# state-machine

./: .gitignore  CMakeLists.txt  article.md
.github/workflows/: ci.yaml
examples/: CMakeLists.txt  door.cpp  door.h
include/fsm/: state_machine.h
include/fsm/actions/: by_default.h  do_nothing.h  may.h  on.h  one_of.h  transition_to.h  utils.h  will.h
include/fsm/types/: Types.h  types.h  utils.h
include/fsm/utils/: array_utils.h  static_string.h
part1/: CMakeLists.txt
part2/: CMakeLists.txt  Door.h  example.cpp
part2/fsm/: state_machine.h
part2/fsm/actions/: On.h  Will.h  do_nothing.h  may.h  on.h  transition_to.h
part3/: CMakeLists.txt  example.cpp
part4/: CMakeLists.txt  Door.h  example.cpp
part4/fsm/: state_machine.h
part4/fsm/actions/: Will.h  do_nothing.h  may.h  transition_to.h  utils.h
src/examples/: CMakeLists.txt  door.cpp
src/fsm/actions/: by_default.h  do_nothing.h  transition_to.h
src/fsm/utils/: static_string.h
tests/: CMakeLists.txt  static_string.cpp
